// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`main 1`] = `
{
  "account": {
    "number": "XX5489",
    "number_formatted": "x5489",
    "type": "card",
  },
  "transaction": {
    "amount": 12345,
    "currency": "INR",
    "date": "Wed Jan 31 2024 20:05:04 GMT+0000 (India Standard Time)",
    "merchant": "DREAMPLUG T",
    "type": "debit",
  },
}
`;

exports[`main 2`] = `
{
  "account": {
    "number": "XX5489",
    "number_formatted": "x5489",
    "type": "card",
  },
  "transaction": {
    "amount": 4760.92,
    "currency": "INR",
    "date": "Wed Mar 20 2024 12:23:39 GMT+0000 (India Standard Time)",
    "merchant": "KAVITHAA AG",
    "type": "debit",
  },
}
`;
